--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -14,6 +14,7 @@ library
                , obelisk-executable-config-lookup
                , obelisk-generated-static
                , text
+               , time
                , containers
   exposed-modules:
     Frontend
